tests/ui/frontmatter/frontmatter-invalid-in-fn.rs
#![feature(frontmatter)]
//~^ unknown feature `frontmatter`

fn main() {
---
---
}
//~^ ERROR expected expression, found `}`
